fix: improve focus outline visibility with offset

--- a/public/css/base.css
+++ b/public/css/base.css
@@ -41,7 +41,7 @@ ul.bullet-list li + li { margin-top: .5em; }
 
 /* Focus outline */
 *:where(:focus-visible),
-*:where(.simulate-focus) { outline: 3px solid var(--color-blue-50); border-radius: .5rem; box-shadow: 0 0 1rem 0 rgba(var(--shadow-rgb), .2); }
+*:where(.simulate-focus) { outline: 3px solid var(--color-blue-50); outline-offset: 1px; border-radius: .5rem; box-shadow: 0 0 1rem 0 rgba(var(--shadow-rgb), .2); }
 
 *:not(:defined) { display: none; }
 
